feat: cleaning up bad practices (#29)
* feat: change search instead of get by criteria, and cleaned transactional from controller

* feat: add criteria as required and removed from controller start and end date manually mapping

* feat: tests fixed without startdate and enddate

* feat: clean transactional annotation

* feat: doubled pom rest dependency

* feat: moved trasactions to the services

* feat: fix sonar issue with return null in service and removed createBy, tartDate and endDate from api and other places

* feat: removed showAllDocuments endpoint with all resources

* feat: versions in docs

* feat: MR remarks and sonar issue

---------
