# src/main/java/org/tkit/onecx/document/rs/internal/controllers/DocumentController.java
@@ -1,8 +1,13 @@
 package org.tkit.onecx.document.rs.internal.controllers;
 
-import java.time.LocalDateTime;
+import static jakarta.transaction.Transactional.TxType.NOT_SUPPORTED;
+
 import java.time.format.DateTimeFormatter;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Locale;
+import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.function.Predicate;
@@ -16,50 +21,36 @@ import jakarta.ws.rs.core.Response;
 import org.jboss.resteasy.reactive.RestResponse;
 import org.jboss.resteasy.reactive.server.ServerExceptionMapper;
 import org.tkit.onecx.document.domain.criteria.DocumentSearchCriteria;
-import org.tkit.onecx.document.domain.daos.AttachmentDAO;
 import org.tkit.onecx.document.domain.daos.ChannelDAO;
 import org.tkit.onecx.document.domain.daos.DocumentDAO;
 import org.tkit.onecx.document.domain.daos.StorageUploadAuditDAO;
-import org.tkit.onecx.document.domain.models.entities.*;
 import org.tkit.onecx.document.domain.models.entities.Channel;
-import org.tkit.onecx.document.domain.models.entities.Document;
 import org.tkit.onecx.document.domain.models.entities.StorageUploadAudit;
 import org.tkit.onecx.document.rs.internal.exceptions.DocumentException;
 import org.tkit.onecx.document.rs.internal.mappers.DocumentMapper;
 import org.tkit.onecx.document.rs.internal.mappers.ExceptionMapper;
 import org.tkit.onecx.document.rs.internal.services.DocumentService;
-import org.tkit.quarkus.jpa.daos.PageResult;
 
 import gen.org.tkit.onecx.document.rs.internal.DocumentControllerApi;
 import gen.org.tkit.onecx.document.rs.internal.model.DocumentCreateUpdateDTO;
 import gen.org.tkit.onecx.document.rs.internal.model.DocumentSearchCriteriaDTO;
 import gen.org.tkit.onecx.document.rs.internal.model.ProblemDetailResponseDTO;
-import io.quarkus.logging.Log;
 
 @ApplicationScoped
+@Transactional(value = NOT_SUPPORTED)
 public class DocumentController implements DocumentControllerApi {
-
     @Inject
     DocumentDAO documentDAO;
-
     @Inject
     ChannelDAO channelDAO;
-
-    @Inject
-    AttachmentDAO attachmentDAO;
-
     @Inject
     StorageUploadAuditDAO storageUploadAuditDAO;
-
     @Inject
     DocumentMapper documentMapper;
-
     @Inject
     DocumentService documentService;
-
     @Inject
     ExceptionMapper exceptionMapper;
-
     public static final DateTimeFormatter CUSTOM_DATE_TIME_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
 
     @Override
@@ -74,31 +65,18 @@ public class DocumentController implements DocumentControllerApi {
     }
 
     @Override
-    @Transactional
-    public Response getDocumentByCriteria(DocumentSearchCriteriaDTO criteriaDTO) {
+    public Response searchDocumentsByCriteria(DocumentSearchCriteriaDTO criteriaDTO) {
         DocumentSearchCriteria criteria = documentMapper.map(criteriaDTO);
-        if (Objects.nonNull(criteriaDTO.getStartDate()) && !criteriaDTO.getStartDate().isEmpty()) { // added this for
-                                                                                                    // date search
-
-            criteria.setStartDate(LocalDateTime.parse(criteriaDTO.getStartDate(), CUSTOM_DATE_TIME_FORMATTER));
-        }
-        if (Objects.nonNull(criteriaDTO.getEndDate()) && !criteriaDTO.getEndDate().isEmpty()) {
-
-            criteria.setEndDate(LocalDateTime.parse(criteriaDTO.getEndDate(), CUSTOM_DATE_TIME_FORMATTER));
-        }
-        PageResult<Document> documents = documentDAO.findBySearchCriteria(criteria);
-        return Response.ok(documentMapper.mapToPageResultDTO(documents))
-                .build();
+        var result = documentService.searchDocuments(criteria);
+        return Response.ok(result).build();
     }
 
     @Override
-    @Transactional
     public Response deleteDocumentById(String id) {
-        var document = documentDAO.findById(id);
-        if (Objects.isNull(document)) {
+        boolean deleted = documentService.deleteDocumentById(id);
+        if (!deleted) {
             return Response.status(Response.Status.NOT_FOUND).build();
         }
-        documentDAO.delete(document);
         return Response.status(Response.Status.NO_CONTENT).build();
     }
 
@@ -111,7 +89,6 @@ public class DocumentController implements DocumentControllerApi {
     }
 
     @Override
-    @Transactional
     public Response getFailedAttachmentData(String documentId) {
         List<StorageUploadAudit> failedAttachmentList = storageUploadAuditDAO
                 .findFailedAttachmentsByDocumentId(documentId);
@@ -121,16 +98,12 @@ public class DocumentController implements DocumentControllerApi {
     }
 
     @Override
-    @Transactional
     public Response updateDocument(String id, DocumentCreateUpdateDTO documentCreateUpdateDTO) {
-        var document = documentDAO.findDocumentById(id);
+        var document = documentService.updateDocumentById(id, documentCreateUpdateDTO);
         if (Objects.isNull(document)) {
             return Response.status(Response.Status.NOT_FOUND).build();
         }
-        document = documentService.updateDocument(document, documentCreateUpdateDTO);
-        return Response.status(Response.Status.CREATED)
-                .entity(documentMapper.mapDetail(documentDAO.update(document)))
-                .build();
+        return Response.status(Response.Status.NO_CONTENT).build();
     }
 
     @Override
@@ -150,58 +123,23 @@ public class DocumentController implements DocumentControllerApi {
     }
 
     @Override
-    @Transactional
     public Response bulkUpdateDocument(List<DocumentCreateUpdateDTO> documentCreateUpdateDTO) {
-        Iterator<DocumentCreateUpdateDTO> it = documentCreateUpdateDTO.listIterator();
-        List<Document> document1 = new ArrayList<>();
-        while (it.hasNext()) {
-            DocumentCreateUpdateDTO dto1 = it.next();
-            var document = documentDAO.findDocumentById(dto1.getId());
-            if (Objects.isNull(document)) {
-                return Response.status(Response.Status.NOT_FOUND).build();
-            }
-            try {
-                document = documentService.updateDocument(document, dto1);
-            } catch (Exception e) {
-                Log.error(e);
-            }
-            document1.add(document);
+        var documents = documentService.bulkUpdateDocuments(documentCreateUpdateDTO);
+        if (documents.isEmpty()) {
+            return Response.status(Response.Status.NOT_FOUND).build();
         }
-        return Response.status(Response.Status.CREATED)
-                .entity(documentMapper.mapDetailBulk(documentDAO.update(document1.stream())))
+        return Response.status(Response.Status.OK)
+                .entity(documentMapper.mapDetailBulk(documents.stream()))
                 .build();
     }
 
     @Override
-    @Transactional
     public Response deleteBulkDocuments(List<String> requestBody) {
-        Iterator<String> itr = requestBody.iterator();
-        while (itr.hasNext()) {
-            String currentDocId = itr.next();
-            var document = documentDAO.findById(currentDocId);
-            if (Objects.isNull(document)) {
-                return Response.status(Response.Status.NOT_FOUND).build();
-            }
-            documentDAO.delete(document);
+        boolean deleted = documentService.deleteBulkDocuments(requestBody);
+        if (!deleted) {
+            return Response.status(Response.Status.NOT_FOUND).build();
         }
         return Response.status(Response.Status.NO_CONTENT).build();
-    }
-
-    @Override
-    @Transactional
-    public Response showAllDocumentsByCriteria(DocumentSearchCriteriaDTO criteriaDTO) {
-        DocumentSearchCriteria criteria = documentMapper.map(criteriaDTO);
-        if (Objects.nonNull(criteriaDTO.getStartDate()) && !criteriaDTO.getStartDate().isEmpty()) {
-
-            criteria.setStartDate(LocalDateTime.parse(criteriaDTO.getStartDate(), CUSTOM_DATE_TIME_FORMATTER));
-        }
-        if (Objects.nonNull(criteriaDTO.getEndDate()) && !criteriaDTO.getEndDate().isEmpty()) {
-
-            criteria.setEndDate(LocalDateTime.parse(criteriaDTO.getEndDate(), CUSTOM_DATE_TIME_FORMATTER));
-        }
-        List<Document> documents = documentDAO.findAllDocumentsBySearchCriteria(criteria);
-        return Response.ok(documentMapper.mapDocuments(documents))
-                .build();
     }
 
     @ServerExceptionMapper
